--- a/admin/adminPedidos.html
+++ b/admin/adminPedidos.html
@@ -11,7 +11,7 @@
 
   <nav class="ap-nav">
     <h2>Panel de Pedidos</h2>
-    <a class="ap-btn-back" href="../USER (mockapi)/administracion.html">← Volver</a>
+    <a class="ap-btn-back" href="administracion.html">← Volver</a>
   </nav>
 
   <main class="ap-main">
