--- a/admin/administracion.html
+++ b/admin/administracion.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
+
     <title>PizzaLine administración</title>
     <link rel="stylesheet" href="../style.css">
-=======
+
     <title>Document</title>
     <link rel="stylesheet" href="../../style.css">
->>>>>>> fd3024bf8f6ad432c4330c59696e2a6dbd32c136
+
 </head>
 <body class="page-administracion">
     <nav>
@@ -20,18 +20,13 @@
     <main>
         <div class="admin-container">
             <ul>
-<<<<<<< HEAD
-                <li><p><a href="gestionarMenu.html">Gestionar menú</a></p></li>
-                <li><p><a href="adminPedidos.html">Gestionar pedidos</a></p></li>
-                <li><p><a href="gestionarRoles.html">Gestionar roles</a></p></li>
-                <li><p><a href="adminDashboard.html">Dashboard</a></p></li>
-                <li><p><a href="adminChangePassword.html">Cambiar contraseña de usuarios</a></p></li>
-=======
+
                 <li><a class="admin-btn" href="gestionarMenu.html">Gestionar menú</a></li>
                 <li><a class="admin-btn" href="adminPedidos.html">Gestionar pedidos</a></li>
                 <li><a class="admin-btn" href="gestionarRoles.html">Gestionar roles</a></li>
                 <li><a class="admin-btn" href="adminDashboard.html">Dashboard</a></li>
->>>>>>> fd3024bf8f6ad432c4330c59696e2a6dbd32c136
+                <li><a class="admin-btn" href="adminChangePassword.html">Cambiar contraseña de usuarios</a></li>
+
             </ul>
         </div>
     </main>
