--- a/admin/gestionarRoles.html
+++ b/admin/gestionarRoles.html
@@ -22,13 +22,17 @@
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" required>
 
+                <label for="email">Email</label>
+                <input type="email" id="email" required>
+
                 <label for="password">Password</label>
                 <input type="password" id="password" required>
 
-                <label for="rol">Rol</label>
+                <label for="rol">Tipo de usuario</label>
                 <select id="rol" required>
-                    <option value="" disabled selected>Seleccionar rol...</option>
-                    <option value="ADMIN">ADMIN</option>
+                    <option value="" disabled selected>Seleccionar tipo...</option>
+                    <option value="USER">Usuario (cliente)</option>
+                    <option value="ADMIN">Administrador</option>
                     <option value="ADMIN_PEDIDOS">Encargado de pedidos</option>
                     <option value="DELIVERY">Delivery</option>
                 </select>
