--- a/perfilUsuario.html
+++ b/perfilUsuario.html
@@ -40,6 +40,11 @@
   <p id="mensaje" style="margin-top: 30px;"></p>
 </main>
 
+  <a href="index.html" id="btnVolver">
+    <span class="pizzaIcono">🍕</span>
+    <span class="textoVolver">Volver</span>
+  </a>
+
   <script src="perfilUsuario.js"></script>
 </body>
 </html>
